--- a/report.tex
+++ b/report.tex
@@ -1,9 +1,8 @@
 %FILL THESE IN
-\def\mytitle{Coursework Report}
-\def\mykeywords{Fill, These, In, So, google, can, find, your, report}
-\def\myauthor{Cool Student}
-\def\contact{4008000@napier.ac.uk}
-\def\mymodule{Module Title (SET00000)}
+\def\mytitle{Reflective Report}
+\def\myauthor{Emma Parsley}
+\def\contact{40206111@live.napier.ac.uk}
+\def\mymodule{Group Project (SET09109)}
 %YOU DON'T NEED TO TOUCH ANYTHING BELOW
 \documentclass[10pt, a4paper]{article}
 \usepackage[a4paper,outer=1.5cm,inner=1.5cm,top=1.75cm,bottom=1.5cm]{geometry}
@@ -65,82 +64,116 @@
 \title{\mytitle}
 \author{\myauthor\hspace{1em}\\\contact\\Edinburgh Napier University\hspace{0.5em}-\hspace{0.5em}\mymodule}
 \date{}
-\hypersetup{pdfauthor=\myauthor,pdftitle=\mytitle,pdfkeywords=\mykeywords}
 \sloppy
 \begin{document}
 	\maketitle
-	\begin{abstract}
-		\lipsum[2]
-	\end{abstract}
-    
-	\textbf{Keywords -- }{\mykeywords}
     %START FROM HERE
 	\section{Introduction}
-    \paragraph{Referencing}
-    You should cite References like this: \cite{Keshav}. The references are saved in an external .bib file, and will automatically be added ot the bibliography at the end once cited.
+	
     
+    \section{Appendices}
+    \textbf{Project Diary}\\\\
+    \textbf{\textit{Week Beginning 8th January 2018:}}\\
+    We started with 3 people in our group which wasn't quite enough to apply for the project we wanted. Before we managed to find our forth member the 3D artist we did have pulled out to do a different project with their friends and so we were back to 2 people both of whom are programmers.\\
+    
+    Managed to get together a group of 4 people allowing us to apply for the Visualisations of synthetic 3D marine environments project.\\
+    
+    We were accepted to work on our chosen project.\\
+    
+    As a group currently consisting of 3 programmers and one project manager we are really hoping to find a 3D artist to create the models for the marine environment.\\
+    
+    Week Beginning 15th January 2018:\\
+    We had our first group meeting and devised a list of questions we wanted to ask our client upon our first meeting.\\
+    
+    As our client was one of the potential supervisors from the university, at the supervisor meet we asked them who they thought would be the best supervisor for us and they said that they would like to supervise us themselves to avoid any confusion.\\
+    
+    I received an email from an artist about an artist interested in joining our group. Sadly from further emails it was discovered they were a 2D rather than a 3D artist and we couldn't see how their efforts would be beneficial so we let them down.\\
+    
+    \textbf{\textit{Week Beginning 22nd January 2018:}}\\
+    It was our understanding from the previous week that we were meeting our client at 3 on the monday of this week, however they did not show meaning we did not manage to get specifics on what was wanted on the project as yet.\\
+    
+    We had our first client meeting this Thursday, they explained to us on how we were to go ahead with the project without a 3D artist. The client also informed us that they were hoping to get pictures and information from the St Abs diving centre to help us with this project. and afterwards thought about how we wanted to split up the team to best complete the work. I was given the task of procedural animation.\\
+    
+    We moved our communications from Facebook to Slack to better organise the information.\\
+    
+    A sound design student was added to our team this week, we haven't yet met him but we are hopeful his sound effects will add to the immersion of the final project.\\ 
+    
+    \textbf{\textit{Week Beginning 29th January 2018:}}\\
+    
+    We had our fist meeting with our new team member, we discussed his role in the team and how it will work with the project.\\
+    
+    The PID is due this week so we helped the PM make sure he had all the details he needed and wrote learning goals to be added to the end.\\
+    
+    The client informed us he was ill this week and thus would not be able to meet with us. This caused a problem for us as the PID needed to be signed and now we would not be meeting the client. The PM looked into solving this by emailing the client (who is also our supervisor) about what to do about this.\\
+    
+    The PID was submitted on time.\\
+    
+    I set up a trello for the group and we all added cards to it that showed what we were planning on working on.\\
+    
+    \textbf{\textit{Week Beginning 5th February 2018:}}
+    Now that the PID had been submitted we were ready to begin work by researching our given topics.\\
+    
+    The client is still ill this week which means they cannot meet with us again which is unfortunate as the meetings are helpful to make sure we are on the right track.\\
+    
+    \textbf{\textit{Week Beginning 12th February 2018:}}\\
+    The client was no longer ill so we got to to have our client meeting this week and we were told we were running a little behind and we need to pick up the pace.\\
+    
+    This week I created a basic 3D model of the terrain so that procedural generation could be started. The client said they would eventually provide us with a better 3D model of the terrain for us to work with. From talking I discovered all of us in the team had different ideas of what the terrain looks like and so I worked with one of my team members to make sure the temporary terrain fulfilled all of our needs.\\
+    
+   	I was made aware this week that Drew was unavailable to do work for the foreseeable future. His job, procedural generation, was an essential part of the clients brief so it was reallocated to me.\\
+   	
+    \textbf{\textit{Week Beginning 19th February 2018:}}
+    
+    This week I began looking into procedural generation, starting with simply getting cubes to randomly spawn on the previously created terrain. Currently have the generation mapped to a key rather than generating around the player.
+    
+    \textbf{\textit{Week Beginning 26th February 2018:}}
+    This week there was no client meeting due to heavy snow closing the university. This was a shame as the feedback from the client is very helpful, However it did not impede my work as I was able to work fine from home.\\
+    
+    I got the objects to generate around the player rather than just in the predefined spot. I replaced the simple shapes I had been using with a simple coral model Tim had created.\\
+   	
+    \textbf{\textit{Week Beginning 5th March 2018:}}\\
+    
+    This week I added restrictions to generation so objects can only spawn below a certain depth and at certain angles. I then added seaweed to the objects generated and now the environment is really beginning to take shape.\\
+    
+    Everything seems to be running smoothly within our team despite the fact Drew has been unable to help us. Our project manager finished and submitted the work in progress this week, they seems to be happy with how it came out.
+    
+    \textbf{\textit{Week Beginning 12th March 2018:}}\\
+    Drew is back this week and happy to work. Obviously as I have taken over the procedural generation role I will continue to work on this and a different task was put upon Drew. We discussed it with our client/supervisor and decided Drew would work on an interactive educational system where interacting with an object will tell you something about the object. Unfortunately we still have no information or pictures of the wildlife in the St Abs diving centre so the information will have to be vague based on the crude models we currently have.\\
+    
+    I really focused on the aesthetics of the project this week so I added fog to decrease visibility, added to the realism and also to stop the spawning and de-spawning of objects in the distance from being as obvious. I also added a variety of different sized and coloured coral and seaweed.
+    
+    \textbf{\textit{Week Beginning 19th March 2018:}}\\
+    I added rarities to the objects so they didn't all spawn at the same rate, however in doing this it became clear that the spread of the objects was unnatural so I worked on getting objects to spawn in clusters as they would in real life to make it seem more natural.
+    
+    In the client meeting this week they suggested adding slight variations to the colour and size of the objects to make it more natural and visually interesting.
+    \textbf{\textit{Week Beginning 26th March 2018 to Week Beginning 2nd April 2018:}}\\
+    Little work was done in these weeks as it was the holidays.\\
+    
+    We were hoping our sound designer could add his sounds into the project this week using a plug-in for Unity. However he had lost his laptop and informed us the plug-in did not work on his computer. As he lives in Glasgow we weren't comfortable asking him to come all the way into the uni in the holidays.\\
+    
+    \textbf{\textit{Week Beginning 9th April 2018:}}\\
+   	This week I added the colour and size variations the client asked for. I also attempted to stop the objects from being able to spawn inside each other however I had issues with this and was not able to get it working.\\
+   	
+   	The client informed us of the final things they wanted and let us know that we needed to focus on finishing the programming and if sound is to be in the program it will need to be added by the sound designer. However the sound designer was not in this meeting so we weren't able to help them get started on implementing it yet.\\
+   	
+    \textbf{\textit{Week Beginning 16th April 2018:}}\\
+    This week we were making sure everything was ready for the presentation next week.\\
+    
+    We had the practice presentation were we practised the brief summary of project aims and approach, that was written by our project manager, and we got feedback on that. However we did not have the time in our slot to set the Vive up on the projector, especially as we didn't know how this would work before hand so we were unable to practice our demo.\\
+    
+    The intention was to get sounds in this week but I understand there were problems with getting the equipment to work and the amount of time the sound designer had to work on the problem.\\
+    
+    I added boundries to the user this week so that the project was a more fleshed out experience as I made it impossible to get outside the terrain or see where the terrain ends.\\
+    
+    \textbf{\textit{Week Beginning 23rd April 2018:}}\\
+    
+    This week we merged everything together so it was all ready and working for our presentation on Thursday.\\
+    
+    Drew put some of the sounds into the project as he finished other work that was needed.\\
+    
+    We came in an hour early on the day of the presentation to set up the Vive with the projector. The cable we had was broken and was darked and streaked so we were really unable to use it. Luckily for us Drew ran around the uni looking for another cable and found one just before the presentations started. It took us the full hour to get set up but I think it was worth it as having the project running live on the projector really helped our presentation.\\
+        
     \figuremacro{h}{placeholder}{ImageTitle}{ - Some Descriptive Text}{1.0}
-	
-	\section{Formatting}
-	Some common formatting you may need uses these commands for \textbf{Bold Text}, \textit{Italics}, and \underline{underlined}.
-	\subsection{LineBreaks}
-	Here is a line
-    
-    Here is a line followed by a double line break.
-	This line is only one line break down from the above, Notice that latex can ignore this
-    
-    We can force a break \\ with the break operator.
-    
-	\subsection{Maths}
-    Embedding Maths is Latex's bread and butter    
-    
-    {\centering \Large \(
-        J = \begin{bmatrix}
-            \frac{\delta e}{\delta \theta _0}
-            \frac{\delta e}{\delta \theta _1}
-            \frac{\delta e}{\delta \theta _2}
-        \end{bmatrix}
-        = e_{current} - e_{target} 
-    \)\par}
-	
-	\subsection{Code Listing}
-    You can load segments of code from a file, or embed them directly.
-    
-\begin{lstlisting}[caption = Hello World! in c++]
-#include <iostream>
 
-int main() {
-    std::cout << "Hello World!" << std::endl;
-    std::cin.get();
-    return 0;
-}
-\end{lstlisting}
-
-\lstinputlisting[caption = Hello World! in python script]{./sourceCode/hello.py}
-    
-\subsection{PseudoCode}
-
-\begin{algorithm}[h]
-\For{$i = 0$ \KwTo $100$}{
- print\_number = true\;
-\If{i is divisible by 3}{
- print "Fizz"\;
- print\_number = false\;
-}
-\If{i is divisible by 5}{
- print "Buzz"\;
- print\_number = false\;
-}
-\If{print\_number}{
-    print i\;
-}
-print a newline\;
-}
-\caption{FizzBuzz}
-\end{algorithm}
-	
-\section{Conclusion}	
-\bibliographystyle{ieeetr}
-\bibliography{references}
 		
 \end{document}
