Report and images

--- a/report.tex
+++ b/report.tex
@@ -70,9 +70,66 @@
     %START FROM HERE
 	\section{Introduction}
 	
+	The aim for this project was to create a 3D marine environment in VR that is procedurally generated. I believe the finished project we produced was well done and surprisingly good looking considering we didn't have a 3D artist. I believe our team worked well together with good communication, verbally and on-line (see Appendix 7.3 Evidence Screen-shots).
+	
+	\section{Teamwork}
+	\subsection{The Team}
+	
+	We generally worked very well as a team, we helped each other out when we had problems (see Appendix 7.2 Team Reports Week beginning 26th February). The team communicated well letting others know when there were problems or about any information that they missed (see Appendix 7.4 Evidence Screen-shots).
+	
+	Tim was extremely good at helping everyone out. He helped me with modelling the test terrain and with getting the objects to generate around the player. He helped Drew a lot with problems he was having in unity. He also helped Dillon attempt to put the music into the unity project although that was unsuccessful.
+	
+	\subsection{My Performance}
+	
+	I believe I performed well in this group, I made sure to complete a Team report for every week of work for the project manager so they knew how things were progressing(see 7.2 Team Reports). I went to almost every client meeting and group meeting to make sure I was up to date on progress. I also made sure to notify my team-mates if I was expecting to not make a meeting (see Appendix 7.4 Evidence Screen-shots, Missed Meeting).
+	
+	I also spent some time helping Drew with his collision detection as he couldn't get it to work.
+	
+	\section{Project Management}
+	\subsection{The Team}
+	The team was managed well, everyone was required to write and submit weekly reports for our project manager (see Appendix 7.2 Team Reports), this helped them keep an eye on progress and see what the split of the work was so they could accurately fill out the team contribution spreadsheet.\\
+	
+	Our project manager kept everyone up to date on information, any received grades and any changed to meetings (See Appendix 7.4 Evidence Screen-shots, information relaying).\\
+	
+	Other team mates also made sure that everyone was kept up to date on information if for whatever reason the project manager did not know it or missed anything (see Appendix 7.4 Evidence Screen-shots, Client information).
+	
+	\subsection{My Performance}
+	
+	In my opinion I have done a good job of managing my time in this project, making sure I get something done every week (see Appendix 7.2 Team Reports) and having something to show to my team mates at meetings.\\
+	
+	I made sure to keep everyone up to date with any information I had and include them in decisions I had to make (see Appendix 7.4 Evidence Screen-shots, 2D artist).\\
+	
+	When a member was unable to do their job in the group I was able to pick up their task and do it to the best of my ability (see Appendix 7.1 Project Diary, Week Beginning 12th February 2018).
+	
+	\section{Drive for Results}
+	\subsection{The Team}
+	
+	The project manager kept us up to date on everything. He also wrote all the reports.
+	
+	Tim worked hard to make a convincing movement system in VR and procedurally animated seaweed.
+	
+	Drew put in as much effort as he could despite not being able to work with us for a period of time, when he came back he really put the effort in and got everything he was assigned done.
+	
+	Dillon created many different sound effects for us, he tried very hard to make them sound convincing, despite not being able to actually record sounds underwater. I would've been good if he was in uni more so we could've spent the time with him to help him put the sounds into unity himself, using the plug-in our supervisor recommended.
+	
+	
+	\subsection{My Performance}
+	
+	I worked hard to make the project something I am proud of and believe you can see obvious improvement of my work throughout the project (see Appendix 7.3 Evidence Screen-shots, Early stages and End state).\\
+		
+	\section{Progress on Personal Learning Goals}
+	
+	I have made good progress on my personal learning goals. I did not get to work with the Vive as much as I would've liked to develop my skills in VR as many teams were using the Vive so we couldn't just use it whenever we wanted.\\
+	
+	I gained a lot of experience as part of a software team and got an idea what it was like to be project managed. It's a shame Drew wasn't available for the whole project as this meant I was working with only one other programmer, so for the programming side of things we were essentially working in a pair rather than a team.
+	
+	I am now a lot more skilled in using unity in 3D, I hadn't really used this software for many 3D programs before, but as I was working on the procedural generation in this one I worked a lot with this 3D engine throughout the whole project.
+	
+	\section{Conclusion}
+	Despite a few hiccups everything went pretty smoothly and I am very happy with the result we ended up with.
     
     \section{Appendices}
-    \textbf{Project Diary}\\\\
+    \subsection{Project Diary}
     \textbf{\textit{Week Beginning 8th January 2018:}}\\
     We started with 3 people in our group which wasn't quite enough to apply for the project we wanted. Before we managed to find our forth member the 3D artist we did have pulled out to do a different project with their friends and so we were back to 2 people both of whom are programmers.\\
     
@@ -172,8 +229,229 @@
     Drew put some of the sounds into the project as he finished other work that was needed.\\
     
     We came in an hour early on the day of the presentation to set up the Vive with the projector. The cable we had was broken and was darked and streaked so we were really unable to use it. Luckily for us Drew ran around the uni looking for another cable and found one just before the presentations started. It took us the full hour to get set up but I think it was worth it as having the project running live on the projector really helped our presentation.\\
-        
-    \figuremacro{h}{placeholder}{ImageTitle}{ - Some Descriptive Text}{1.0}
 
+	\subsection{Team Reports}
+	\textbf{Week Beginning 12th February 2018}\\
+	Working on initial terrain for scene so that procedural generation can be started. Created 2 terrains
+	one very simple one for easy testing of procedural generation and one more intricate one.\\
+	\textbf{Problem}\\
+	From the meeting before working on this it became clear that different members of our team had
+	very different ideas of what the terrain was to be like. This made me confused and unsure what to
+	do.\\
+	\textbf{Solution}\\
+	I worked with Tim to combine our visions into a piece of terrain that made sense to both of us.\\
+	\textbf{Problem}\\
+	From this original design I was unsure how to subdivide it to make it look more detailed.\\
+	\textbf{Solution}\\
+	Tim stepped in and had a go at editing the terrain. What he created seemed reasonable to both of us
+	and we kept it as the second more detailed terrain.\\
+	\textbf{Next Steps}\\
+	Next week I will be starting work on procedural generation as problems have come up for Drew and
+	we need to reallocate his responsibilities.\\\\
+	
+	\textbf{Week Beginning 19th February 2018}\\
+	Pulled the repository from GitHub and worked on getting it running on my computer. Looked into
+	procedural generation of objects in unity. Started coding some simple procedural generation, started
+	with cubes just being generated in random destinations in a predefined area. Continued to work on
+	the generation creating cubes only on defined surfaces, tested on all terrains we have created to use
+	at the moment and seems to work well. Finally I attempted orientate the objects to the surface they
+	spawn on, which from what I can tell also appears to work.\\
+	\textbf{Problems}\\
+	Was unsure how to go about finding the terrain surface to spawn objects on it. Generated objects
+	were half embedded in the terrain. It was hard to see different angles on cubes. Needed to work out
+	how an object needs to be rotated to be on the surface. Angles in Unity work in quaternion's, so
+	they needed to be converted into that format to rotate objects.\\
+	\textbf{Fixes}\\
+	Did a raycast from a random point at the max height downward looking for the mesh collider on the
+	terrain. Added an offset to stop objects being embedded in the terrain that works temporarily but is
+	a hard coded fix and won't work for all objects. Changed objects from cubes to cylinders so it was
+	easier to see the angles the object was at. Took the normal of the hit point from the raycast and
+	found the angle between that and a vector going straight up, which gave the angle in radians, I then
+	converted the angle into degrees multiplied it by an axis I worked out using the same vectors as
+	before and then got Unity c\# to convert that into a quaternion rotation.\\
+	\textbf{Future Plans}\\
+	Look into stopping objects from being able to overlap. Find a better fix for objects being inside
+	terrain. Add different objects with different chances of being spawned. Add objects that spawn at
+	different depths.\\\\
+	
+	\textbf{Week Beginning 26th February 2018}\\
+	This week I worked on having coral generate around the player, so the player can move in any direction and still have the world procedurally generate around them. I also replaced the cube mesh I was currently using as coral with Tim's coral model.\\
+	\textbf{Problem}\\
+	When replacing the coral, I noticed the offset for the object was incorrect and the model actually needed to be moved into the ground rather than away from it. This made it clear that we would need to work out the most aesthetically pleasing offset for each model we wish to use rather than being able to work out the offset in the code.\\
+	\textbf{Solution}\\
+	I added a Coral.cs script to attach to coral prefabs that will contain spawning variables so that the coral spawns in the right area. Currently it is only used for the variable "offset" which tells the procedural script how much to move the unscaled model by to have it correctly positioned on the ground.\\
+	\textbf{Problem}\\
+	There needs to be some way for more procedural prefabs to be created and managed so that they generate when the player moves towards them\\
+	\textbf{Solution}\\
+	I was with Tim when working on this so after telling him my ideas for how to get this to work he came up with the idea for a procedural management class to create the procedural prefabs as the player moves around. His system used a method to simplify the player coordinates into a 2D grid based on the size of the procedural area\\
+	\textbf{Problem}\\
+	The "chunks" of procedural generation should be disabled when the player moves away from them and re-enabled when they move close again.\\
+	\textbf{Solution}\\
+	Methods were made within the procedural class to create objects if they don't already exist or to enable them if they do, and a Method to disable all objects in that chunk. The procedural manager now looks at the 9 chunks surrounding the player and creates procedural objects where there aren't any already. If the player moves to a different chunk the 9 chunks now surrounding the player are checked against the previous 9 chunks and they are activated and deactivated appropriately\\
+	\textbf{Next Steps}\\
+	Next week I plan to implement some spawning constraints to the generation so that objects can only be spawned below a certain depth etc.\\\\
+	
+	\textbf{Week Beginning 5th March 2018}\\
+	This week I added restrictions to the coral so that you can set the coral to only spawn at specific
+	depths and angles. I made it so multiple different types of coral can be spawned and added Seaweed
+	to the list.\\
+	\textbf{Problem}\\
+	Seaweed doesn't follow the direction of the terrain like coral does, so just adding it to the spawn list
+	caused it to look like an oversized display of the terrains normal. The Seaweed shouldn't change its
+	angle with the terrain but should rather spawn upright.\\
+	\textbf{Solution}\\
+	The solution for this was simple as before I changed it this was how the corals spawned by default. I
+	simply added a boolean to the coral script called ChangeAngle and then added an if statement to the
+	generation that bypasses the process of figuring out the angle of rotation if the Boolean is not true.\\
+	\textbf{Problem}\\
+	Now that there were restrictions on the placement of the coral I had to decide what to do if an
+	object couldn't spawn on the randomly generated position because it was too low, too high, too
+	steep, or too shallow.\\
+	\textbf{Solution}\\
+	To solve this, I gave the procedural a tries variable and the program will loop tries times to try and
+	find an object that fits in that spot, if it doesn't manage to find one, it will simply continue on as it
+	would if it hadn't found ground to place on.\\
+	\textbf{Next Steps}\\
+	The next step is to implement rarities so the same amount of each different object doesn't spawn
+	everywhere, and also to try and stop objects from spawning inside each other.\\\\
+	
+	\textbf{Week Beginning 12th March 2018}\\
+	This week I focused on the aesthetics of the project. I added fog so that you couldn't see objects
+	spawning in in the distance as well. I also added some different sized corals with different colours
+	and also some different sized seaweed.\\
+	\textbf{Problem}\\
+	The user could see objects spawn in the distance and the visibility was completely unrealistic for
+	underwater.\\
+	\textbf{Solution}\\
+	Added fog. I made the fog a blue shade so it emulated the misty blue look of being underwater. This
+	decreased the user's visibility making it more realistic and also stopping them from being able to so
+	easily see the objects spawn in.\\
+	\textbf{Problem}\\
+	The skybox was not affected by the fog so coming to the edges of the terrain was strange as you
+	could suddenly see the unity default skybox very clearly.\\
+	\textbf{Solution}\\
+	Changed the skybox to be the same colour as the fog so it is indistinguishable from the fox until you
+	get closer to the edge of the terrain than the player should be allowed to go.\\
+	\textbf{Problem}\\
+	The generated world looked quite boring as there were only really a couple of types of objects in it.\\
+	\textbf{Solution}\\
+	Added more objects of varying sizes and colour.
+	The next steps for me will be to add rarities to the generation so that everything doesn't spawn at
+	the same rate.\\\\
+	
+	\textbf{Week Beginning 19th March 2018}\\
+	This week I added rarities to the generation so objects don't all spawn at the same rate.\\
+	\textbf{Problem}\\
+	Keeping the same sort of spread depending how many objects there are.
+	Solution
+	The approximate amount of objects in a chunk should be the corals rarity multiplied by the amount
+	of objects over 100. This should increase and decrease the amount spawned with the amount of
+	objects spawned in a chunk.\\
+	\textbf{Problem}\\
+	The objects looked really separated, in real life more similar flora and fauna tend to appear together.\\
+	\textbf{Solution}\\
+	Added clustering to fix this problem, any object spawned can spawn with friends of the same type,
+	anywhere from its minimum group size to its maximum group size. This caused the objects to
+	generate in groups which made it look a lot nicer.\\
+	Next steps is to add slight variations in size and colour to add more visual interest to the scene.\\\\
+	
+	\textbf{Week Beginning 9th April 2018}\\
+	This week and the previous holiday weeks I worked on added colour and size variations in spawning
+	as well as stopping objects from being able to spawn inside one another.
+	Adding size and colour variations was pretty simple, I only had to look up the specific syntax for
+	changing colour and add a random value from a range too that to give everything a slight variation.
+	The same was done to randomize the size but I already knew the syntax for that so it was even
+	easier.\\
+	\textbf{Problem}\\
+	Objects can spawn inside each other which is strange when walking around the world.\\
+	\textbf{Solution}\\
+	Check if an object is colliding with another object and if it is try to move it somewhere in a close
+	range, if it fails to move enough times abandon making that object.\\
+	\textbf{Problem}\\
+	Collider collisions only checked in update but objects are spawned before update is called so it's
+	difficult to tell if an object is colliding with another one.\\
+	\textbf{Solution}\\
+	I have been unable to come up with a solution to this problem as yet.\\
+	Next steps are to make sure project is ready to be demoed. To help get everything merged together
+	so it is ready to be showed off in full at the presentation. If I have time I will also look into the issue
+	with objects spawning inside each other and try to rectify that.\\\\
+	
+	\textbf{Week Beginning 16th April 2018}\\
+	This week I created boundaries for the user. Before this point the user could navigate where ever
+	they wanted in the world, be that above the water, through the floor or off the edge of the world.\\
+	\textbf{Problem}\\
+	The user's hit box needs to be around the player even if the player moves in the physical space they
+	have rather than using the movement controls in the virtual space. This requires the hit box to be
+	attached to the eye camera's position. However it cannot be simply attached to the eye camera
+	component as this would only affect the user's view and not the other parts which were part of the
+	user's camera rig.\\
+	\textbf{Solution}\\
+	The hit box was attached to the parent component of the user's camera rig hierarchy and then
+	moved using code to stay around the user's view.
+	Problem
+	Making the hit box the size of the user standing meant that the user was too big to explore the
+	whole environment.\\
+	\textbf{Solution}\\
+	The hit box was made to be approximately the size of the players head. This allowed them to travel
+	right up to the surface of the water so they could reach and put their controller's through the water
+	but they cannot see above the water. The user can go down until the ground is about up to their
+	chin, which may seem strange but it actually allows for close inspection of the flora and fauna down
+	right at the bottom and from usage doesn't seem to cause a loss of emersion.\\
+	\textbf{Problem}\\
+	When it comes to the borders for the edges of the environment they cannot simply be placed right
+	on the edges of the terrain as that would allow users to see that the world does not continue passed
+	this point and would ruin emersion.\\
+	\textbf{Solution}\\
+	The borders had to be carefully placed so the user can travel in as much of the terrain as possible,
+	but when they come across a world border they cannot see the end of the terrain. The fog helped
+	with this as after a certain distance the world was concealed by the blue sea fog.\\
+	\textbf{Problem}\\
+	It is very annoying to come across invisible world borders that stop you from moving suddenly. As
+	there is no sign they are there, even for me who put them in, it just feels like your controls have
+	stopped working rather than that you have reached a border.\\
+	\textbf{Solution}\\
+	A grid texture was added to the boundaries and a script which disabled and enabled the mesh
+	renderer. The mesh renderer would start of disabled, and if it would turn on when the player walked
+	into it. This allowed the user to see that there was a border there so they knew why they were being
+	stopped. The mesh renderer on the borders originally disabled immediately when the player
+	stopped hitting it but this felt strange as you didn't really get enough time to assess the border and
+	see where exactly it was blocking. This was rectified by simple giving it a couple seconds of delay
+	before it disappeared.\\\\
+	
+	\textbf{Week Beginning 23rd April 2018}\\
+	This was the week of the presentation so I helped get everything merged together and working
+	before the presentation.\\
+	\textbf{Problem}\\
+	The taller seaweed was colliding with the surface of the water causing it's physics based animation
+	to get confused and act weirdly.\\
+	\textbf{Solution}\\
+	There is a way to stop collisions between layers, so the objects where added to appropriate layers
+	and the surface water no longer collides with any coral objects and I also stopped the borders from
+	colliding with the coral as well.\\
+	We managed to merge everything together well and have it all working for our presentation on
+	Thursday.
+	
+	\subsection{Learning Goals}
+	I'm looking to gain experience as part of a software team and to get a knowledge of how best to break down a project brief into manageable tasks for individuals to do that will hopefully eventually come together into a good quality product.\\
+	
+	I am also interested to getting to grips with developing in VR for the HTC Vive, while I haven't coded for it before I am interested in VR and I am excited to teach myself how to work with it.\\
+	
+	Hopefully by the end of this I will have experience of how to effectively work as group in software, have a better idea of how to use unity in 3D and also have a good understanding of how to develop for VR.
+	
+    \subsection{Evidence Screen-shots}
+	\figuremacro{h}{meet}{Confirmed Meetings}{ - Client confirmed our meeting schedule.}{1.0}
+	
+	\figuremacro{h}{2d}{2D artist}{ - Discussed with the group what to do about the 2D artist that emailed.}{1.0}
+	
+	\figuremacro{h}{sa}{Client information}{ - Information relayed to team after meeting client for the fist time.}{1.0}
+	
+	\figuremacro{h}{original}{Early stages}{ - Original view of procedural generation.}{1.0}
+	
+	\figuremacro{h}{recent}{End state}{ - End state of procedural generation.}{1.0}
+	
+	\figuremacro{h}{pm}{Information relaying}{ - PM making sure everyone gets information from client meeting.}{1.0}
+	
+	\figuremacro{h}{missing}{Missed meeting}{ - Alerting the group that I will not be attending a meeting.}{1.0}
+	
 		
 \end{document}
